# spendsentry

./: .coverage  .gitignore  JULES_PROMPT.md  README.md  STATUS.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
spendsentry/: __init__.py  alerter.py  cli.py  config.py  correlator.py  daemon.py  display.py  storage.py  velocity.py
spendsentry/providers/: aws.py  base.py
tests/: test_alerter.py  test_aws.py  test_cli.py  test_config.py  test_correlator.py  test_storage.py  test_velocity.py
tests/fixtures/: sample_git_log.txt  sample_spend_history.json
