[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spendsentry"
version = "0.1.0"
description = "Real-time cloud spend monitoring that catches runaway costs before you get the bill"
authors = [{name = "UA9-TA", email = "vkrmsatsangi@gmail.com"}]
keywords = ["cloud", "aws", "cost", "monitoring", "developer-tools", "cli", "devops"]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "boto3>=1.34",
    "httpx>=0.27",
    "schedule>=1.2",
    "tomli>=2.0; python_version < '3.11'",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "ruff", "pytest-mock", "pytest-cov", "moto>=5.0"]

[project.scripts]
spendsentry = "spendsentry.cli:app"

[project.urls]
Homepage = "https://github.com/UA9-TA/spendsentry"
Changelog = "https://github.com/UA9-TA/spendsentry/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/fixtures"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
